Issue #SB-26877 fix: miss alignment in text in quml

--- a/org.sunbird.questionunit.quml-1.1/renderer/styles/style.css
+++ b/org.sunbird.questionunit.quml-1.1/renderer/styles/style.css
@@ -464,7 +464,12 @@ ol {
 }
 #questionset .mcq-horizontal .mcq-options .mcq-option, 
 #questionset .mcq-vertical .mcq-options .mcq-option, 
-#questionset .mcq-grid .mcq-options .mcq-option,
+#questionset .mcq-grid .mcq-options .mcq-option{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 #questionset .mcq-vertical .mcq-title, 
 #questionset .mcq-grid .mcq-title{
   display: flex;
